firewall/rules.v4
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [118:18244]
:GENERAL-ALLOW - [0:0]
:REJECT-ALL - [0:0]
-A INPUT -m comment --comment "No rules of any kind below this rule" -j GENERAL-ALLOW
-A INPUT -j REJECT-ALL
-A FORWARD -i eth0 -o eth1 -m state --state RELATED,ESTABLISHED -m comment --comment "Forward to Local LAN" -j ACCEPT
-A FORWARD -i eth1 -o eth0 -m comment --comment "Forward from Local LAN" -j ACCEPT
-A GENERAL-ALLOW -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m comment --comment "Established Connections" -j ACCEPT
-A GENERAL-ALLOW -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m comment --comment "SSH Access" -j ACCEPT
-A GENERAL-ALLOW -d HOST_GATEWAY/32 -p udp -m udp -m comment --comment "Local UDP Traffic" -j ACCEPT
-A GENERAL-ALLOW -s NETWORK.0/24 -d NETWORK.1/32 -p tcp -m tcp --dport 53 -m comment --comment "Local DNS Traffic" -j ACCEPT
-A GENERAL-ALLOW -s NETWORK.0/24 -d NETWORK.1/32 -p udp -m udp --dport 53 -m comment --comment "Local DNS Traffic" -j ACCEPT
-A GENERAL-ALLOW -p icmp -j ACCEPT
-A GENERAL-ALLOW -i lo -j ACCEPT
-A REJECT-ALL -p tcp -j REJECT --reject-with tcp-reset
-A REJECT-ALL -p udp -j REJECT --reject-with icmp-port-unreachable
-A REJECT-ALL -p icmp -j DROP
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -m comment --comment "Masquarade Local Traffic" -j MASQUERADE
COMMIT
